testlab/model-deploy-test/frontend2service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend2
  name: frontend2service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend2
  type: ClusterIP
